# Lab3

./: .gitignore  CMakeLists.txt
Source/Interface/: Example.hpp  Interface.hpp  Manual.hpp
Source/Main/: Main.cpp
Source/Structures/Basic/: .gitignore  DynamicArray.hpp  Node.hpp  Node2.hpp  Node3.hpp
Source/Structures/PriorityQueue/: PriorityQueue.hpp
Source/Structures/Result/: Tree.hpp
Source/Structures/Trees/: .gitignore  BinaryTree.hpp  Tree.hpp  Tree3.hpp
Source/Tests/Basic/: Check.h  RandomTestFunctions.hpp  Test.hpp  TestEngine.hpp  TestFunctions.hpp
Source/Tests/Main/: TestMain.cpp  TestMain.hpp
Source/Tests/Tests/: TestsArray.hpp  TestsBinaryTree.hpp  TestsNode.hpp  TestsPriorityQueue.hpp
Source/Utility/DataTypes/: Person.hpp
Source/Utility/Exceptions/: Exception.hpp
Source/Utility/Randomization/: RandomGen.cpp  RandomGen.hpp
Source/Utility/UtilityFunctions/: TimeUtilities.hpp
